compiler/testData/diagnostics/tests/properties/backingField/trivialExplicitBackingFIeld.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
class A {
    val number: Number
        <!UNSUPPORTED_FEATURE!>field = 1<!>
}
